tests/lean/push.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Imported 'Int'
  Assumed: first
  Assumed: a
  Assumed: b
  Assumed: c
  Assumed: f
f a
push.lean:11:5: error: unknown identifier 'f'
variable first : Bool
10 ++ 20 : ℤ
push.lean:20:9: error: unknown identifier '++'
push.lean:22:0: error: main scope cannot be removed
